# cell-key-perturbation

./: LICENSE  README.md  pyproject.toml
.github/workflows/: build-pub.yml
cell_key_perturbation/: __init__.py  bigquery.py  cell_key_perturbation.py  create_perturbed_table.py  generate_test_data.py
cell_key_perturbation/src/: validate_inputs_before_perturbation.py
cell_key_perturbation/utils/: generate_record_key.py  generate_test_data.py  generate_test_ptable.py  perturbation_bigquery.py  validate_inputs_before_perturbation.py
data_files/: cell_key_perturbation_test_data.csv  ptable_10_5_rule.csv
documentation/: CellKeyPerturbation_Py.md  Cell_Key_Perturbation_Python_User_Notes.md  Cell_key_perturbation_technical_spec.md  Method_Specification_cell_key_perturbation_py.md  Quality_Assurance_Checklist.md  SML_UserDocs_CellKeyPerturbation_Py.md  User_Notes_cell_key_perturbation_py.md  sdc_perturbation.md  sdc_perturbation_old.md
documentation/archive/: OLD SML_UserDocs_CellKeyPerturbation_Py.md
