[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "cell_key_perturbation"
authors = [{name = "Iain Dove", email = "sdc.queries@ons.gov.uk"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

[tool.flit.external-data]
directory = "data_files"